--- a/token.scss
+++ b/token.scss
@@ -26,7 +26,7 @@ img {
     transition: 1s ease-out;
 }
 
-.globe {
+.token {
     padding: 0;
     margin: 50px 10px;
     float: left;
@@ -73,27 +73,9 @@ img {
         bottom: -17px;
         z-index: -999;
     }
-}
 
-
-.text {
-    color: white;
-    font-family: 'Arial', sans-serif;
-    font-weight: bold;
-    font-size: 15pt;
-    text-shadow: 0px 0px 2px $color-black-dark,
-        0px 0px 4px white;
-    position: absolute;
-    text-align: center;
-    top: 38px;
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
-    z-index: 1;
-    transition: 1s ease-out;
-
-    &:hover {
-        transition: 1s ease-out;
+    &.over {
+        border: 3px dotted red;
     }
 }
 
