--- a/token.scss
+++ b/token.scss
@@ -59,20 +59,20 @@ img {
         -webkit-transform: scale(0.75, 0.5);
     }
 
-    &::after {
-        content: "";
-        position: absolute;
-        border-radius: 100px;
-        width: 100%;
-        height: 20%;
-        background: -moz-radial-gradient(center, ellipse cover, $color-black-transparent 0%, $color-transparent 77%, $color-transparent 100%);
-        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, $color-black-transparent), color-stop(77%, $color-black), color-stop(100%, $color-black));
-        background: -webkit-radial-gradient(center, ellipse cover, $color-black-transparent 0%, $color-black 77%, $color-black 100%);
-        background: radial-gradient(ellipse at center, $color-black-transparent 0%, $color-black 77%, $color-black 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$color-transparent, endColorstr=$color-transparent, GradientType=1);
-        bottom: -17px;
-        z-index: -999;
-    }
+    // &::after {
+    //     content: "";
+    //     position: absolute;
+    //     border-radius: 100px;
+    //     width: 100%;
+    //     height: 20%;
+    //     background: -moz-radial-gradient(center, ellipse cover, $color-black-transparent 0%, $color-transparent 77%, $color-transparent 100%);
+    //     background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, $color-black-transparent), color-stop(77%, $color-black), color-stop(100%, $color-black));
+    //     background: -webkit-radial-gradient(center, ellipse cover, $color-black-transparent 0%, $color-black 77%, $color-black 100%);
+    //     background: radial-gradient(ellipse at center, $color-black-transparent 0%, $color-black 77%, $color-black 100%);
+    //     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$color-transparent, endColorstr=$color-transparent, GradientType=1);
+    //     bottom: -17px;
+    //     z-index: -999;
+    // }
 
     &.over {
         border: 3px dotted red;
