--- a/sava.scss
+++ b/sava.scss
@@ -18,8 +18,7 @@ body {
     font-family: 'Arial', sans-serif;
     font-weight: bold;
     font-size: 15pt;
-    text-shadow: 0px 0px 2px $color-black-dark,
-        0px 0px 4px white;
+    text-shadow: 0px 0px 2px $color-black-dark, 0px 0px 4px white;
     position: absolute;
     text-align: center;
     top: 38px;
