--- a/token.css
+++ b/token.css
@@ -1,7 +1,7 @@
 img {
-  width: 100px;
-  height: 100px;
-  border-radius: 100px;
+  width: 4.8529411765vh;
+  height: 4.8529411765vh;
+  border-radius: 4.8529411765vh;
   opacity: 0.5;
   z-index: 1;
   position: absolute;
@@ -15,10 +15,10 @@ img {
   float: left;
   position: relative;
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 4.8529411765vh;
+  height: 4.8529411765vh;
   border: 1px solid rgba(0, 0, 0, 0.5019607843);
-  border-radius: 100px;
+  border-radius: 4.8529411765vh;
   transition: 1s ease-out;
 }
 .token:hover {
@@ -29,7 +29,7 @@ img {
 .token::before {
   content: "";
   position: absolute;
-  border-radius: 100px;
+  border-radius: 4.8529411765vh;
   width: 100%;
   height: 100%;
   background-image: -moz-linear-gradient(top, #fafaff 0%, rgba(250, 250, 255, 0.7019607843) 30%, rgba(0, 0, 0, 0) 100%);
@@ -39,8 +39,37 @@ img {
   -moz-transform: scale(0.75, 0.5);
   -webkit-transform: scale(0.75, 0.5);
 }
+.token::after {
+  content: "";
+  position: absolute;
+  border-radius: 4.8529411765vh;
+  width: 100%;
+  height: 20%;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$color-transparent, endColorstr=$color-transparent, GradientType=1);
+  bottom: -17px;
+  z-index: -999;
+}
 .token.over {
   border: 3px dotted red;
+}
+
+.text {
+  color: white;
+  font-family: "EB Garamond", sans-serif;
+  font-weight: bold;
+  font-size: 15pt;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5019607843), 0px 0px 4px white;
+  position: absolute;
+  text-align: center;
+  top: 4.8529411765vh;
+  width: 4.8529411765vh;
+  height: 4.8529411765vh;
+  overflow: hidden;
+  z-index: 1;
+  transition: 1s ease-out;
+}
+.text:hover {
+  transition: 1s ease-out;
 }
 
 .blue {
