--- a/sava.css
+++ b/sava.css
@@ -1,1 +1,17 @@
-/*# sourceMappingURL=sava.css.map */
+body {
+  font-family: "EB Garamond", "Poiret One", helvetica, arial, sans-serif;
+  margin: 2em;
+}
+
+.token-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+}
+
+[draggable] {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}/*# sourceMappingURL=sava.css.map */
