--- a/token.scss
+++ b/token.scss
@@ -15,10 +15,13 @@ $color-pale: #fafaff;
 $color-pale-transparent: #fafaffb3;
 $color-transparent: #00000000;
 
+$token-size: (((100vh/8)*.66)/1.7);
+$test: grey;
+
 img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
+    width: $token-size;
+    height: $token-size;
+    border-radius: $token-size;
     opacity: 0.5;
     z-index: 1;
     position: absolute;
@@ -32,10 +35,10 @@ img {
     float: left;
     position: relative;
     display: block;
-    width: 100px;
-    height: 100px;
+    width: $token-size;
+    height: $token-size;
     border: 1px solid $color-black-opaque;
-    border-radius: 100px;
+    border-radius: $token-size;
     transition: 1s ease-out;
 
     &:hover {
@@ -47,7 +50,7 @@ img {
     &::before {
         content: "";
         position: absolute;
-        border-radius: 100px;
+        border-radius: $token-size;
         width: 100%;
         height: 100%;
         background-image: -webkit-linear-gradient(top, $color-pale 0%, $color-pale-transparent 30%, $color-transparent 100%);
@@ -62,13 +65,9 @@ img {
     &::after {
         content: "";
         position: absolute;
-        border-radius: 100px;
+        border-radius: $token-size;
         width: 100%;
         height: 20%;
-        background: -moz-radial-gradient(center, ellipse cover, $color-black-transparent 0%, $color-transparent 77%, $color-transparent 100%);
-        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, $color-black-transparent), color-stop(77%, $color-black), color-stop(100%, $color-black));
-        background: -webkit-radial-gradient(center, ellipse cover, $color-black-transparent 0%, $color-black 77%, $color-black 100%);
-        background: radial-gradient(ellipse at center, $color-black-transparent 0%, $color-black 77%, $color-black 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$color-transparent, endColorstr=$color-transparent, GradientType=1);
         bottom: -17px;
         z-index: -999;
@@ -76,6 +75,27 @@ img {
 
     &.over {
         border: 3px dotted red;
+    }
+}
+
+.text {
+    color: white;
+    font-family: 'EB Garamond', sans-serif;
+    font-weight: bold;
+    font-size: 15pt;
+    text-shadow: 0px 0px 2px #00000080, 
+        0px 0px 4px white;
+    position: absolute;
+    text-align: center;
+    top: $token-size;
+    width: $token-size;
+    height: $token-size;
+    overflow: hidden;
+    z-index: 1;
+    transition: 1s ease-out;
+
+    &:hover {
+        transition: 1s ease-out;
     }
 }
 
