--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: "Bookinsanity";
-    src: url("/fonts/Bookinsanity/Bookinsanity.otf");
-    font-weight: 300;
+    font-weight: 100;
+    src: url("./fonts/Bookinsanity/Bookinsanity.woff") format("woff");
 }
 @font-face {
     font-family: "Nodesto Caps Condensed";
-    src: url("/fonts/Nodesto Caps Condensed/Nodesto Caps Condensed.otf");
+    font-weight: 100;
+    src: url("./fonts/Nodesto Caps Condensed/Nodesto Caps Condensed.woff") format("woff");
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +17,6 @@
   body {
     font-family: "Bookinsanity", sans-serif;
   }
-  
   .nav,
   .slider {
     display: flex;
