--- a/tools/tool-nav.css
+++ b/tools/tool-nav.css
@@ -24,10 +24,23 @@ h1 {
   letter-spacing: 0.5rem;
   color: #d1000a;
   transition: all 0.3s ease;
-  z-index: 1;
 }
 h1:hover {
   color: #858585;
+}
+h2 {
+  font-family: "Nodesto Caps Condensed", sans-serif;
+  font-size: 1.8rem;
+  margin: 0;
+  letter-spacing: 0.3rem;
+}
+p, li {
+  font-family: "Bookinsanity", sans-serif;
+  font-size: 1rem;
+}
+ul {
+  list-style-type: none;
+  padding-left: 20px;
 }
 body {
   width: 100vw;
@@ -44,12 +57,14 @@ body::-webkit-scrollbar, body::-webkit-scrollbar:horizontal {
 .nav {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   height: 3rem;
-  position: relative;
-  padding: 2em 1em;
+  position: absolute;
+  top: 0;
+  padding: 1em 1em;
   z-index: 5;
+}
+.nav h1 {
+  z-index: 1;
 }
 .main {
  display: flex;
