--- a/tools/deck-of-many/style.css
+++ b/tools/deck-of-many/style.css
@@ -8,7 +8,7 @@
     flex-direction: row;
 }
 
-#card-display {
+#card {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,7 +34,7 @@
 
     background: linear-gradient(-45deg, #460200, #110e0a);
     background-size: 400% 400%;
-    animation: gradient 5s ease infinite;
+    /* animation: gradient 5s ease infinite; */
 }
 
 #card-title {
